--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -1785,6 +1785,33 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import numpy as np\n",
+        "import json\n",
+        "\n",
+        "# Make sure the folders exist\n",
+        "os.makedirs(\"models\", exist_ok=True)\n",
+        "os.makedirs(\"results\", exist_ok=True)\n",
+        "\n",
+        "# --- Save model ---\n",
+        "model.save(\"models/mlp_smile_final.keras\")\n",
+        "\n",
+        "# --- Save training history (as .npy) ---\n",
+        "np.save(\"results/history.npy\", history.history)\n",
+        "\n",
+        "# --- Save training history (as .json) ---\n",
+        "with open(\"results/mlp_history.json\", \"w\") as f:\n",
+        "    json.dump(history.history, f)\n"
+      ],
+      "metadata": {
+        "id": "p6y4RNMdNiDA"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
