--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -710,6 +710,222 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Batch LIME Explanations (save as exp_sample#.png)\n",
+        "\n",
+        "!pip -q install lime\n",
+        "from lime import lime_image\n",
+        "from skimage.segmentation import slic, mark_boundaries\n",
+        "from keras.models import load_model\n",
+        "import numpy as np, matplotlib.pyplot as plt, os\n",
+        "\n",
+        "# --- configuration ---\n",
+        "IMG_SIZE     = 48\n",
+        "MODEL_PATH   = \"models/mlp_smile_final.keras\"\n",
+        "X_TEST_PATH  = \"data/processed/X_test.npy\"\n",
+        "Y_TEST_PATH  = \"data/processed/y_test.npy\"\n",
+        "FIG_DIR      = \"figures\"\n",
+        "os.makedirs(FIG_DIR, exist_ok=True)\n",
+        "\n",
+        "N_TOTAL      = 10        # total explanations to generate\n",
+        "NUM_SAMPLES  = 800       # higher = more stable, but slower\n",
+        "NUM_FEATURES = 6         # number of superpixels highlighted\n",
+        "RANDOM_STATE = 42\n",
+        "\n",
+        "# --- load model and data ---\n",
+        "model  = load_model(MODEL_PATH)\n",
+        "X_test = np.load(X_TEST_PATH, allow_pickle=True)\n",
+        "y_test = np.load(Y_TEST_PATH, allow_pickle=True).astype(int)\n",
+        "\n",
+        "def to_2d(xrow):\n",
+        "    return xrow.reshape(IMG_SIZE, IMG_SIZE) if xrow.ndim == 1 else xrow\n",
+        "\n",
+        "# Balanced sampling across classes\n",
+        "rng = np.random.default_rng(RANDOM_STATE)\n",
+        "idx_pos = rng.permutation(np.where(y_test == 1)[0]).tolist()\n",
+        "idx_neg = rng.permutation(np.where(y_test == 0)[0]).tolist()\n",
+        "half = N_TOTAL // 2\n",
+        "picked = idx_pos[:half] + idx_neg[:(N_TOTAL - half)]\n",
+        "rng.shuffle(picked)\n",
+        "\n",
+        "# Predictor for LIME\n",
+        "def predict_fn(images):\n",
+        "    arr = np.array(images)\n",
+        "    if arr.ndim == 3:                 # single image\n",
+        "        arr = arr[None, ...]\n",
+        "    arr = arr.astype(\"float32\")\n",
+        "    if arr.max() > 1.5:\n",
+        "        arr = arr / 255.0\n",
+        "    if arr.shape[-1] == 3:            # RGB -> grayscale\n",
+        "        arr = arr.mean(axis=-1)\n",
+        "    flat = arr.reshape(len(arr), -1)\n",
+        "    p_smile = model.predict(flat, verbose=0).reshape(-1, 1)  # sigmoid\n",
+        "    return np.hstack([1 - p_smile, p_smile])                 # [not_smile, smile]\n",
+        "\n",
+        "# Init explainer with seed (do NOT pass random_state to explain_instance)\n",
+        "explainer = lime_image.LimeImageExplainer(random_state=RANDOM_STATE)\n",
+        "\n",
+        "def explain_and_save(idx, out_path):\n",
+        "    img2d = to_2d(X_test[idx])\n",
+        "\n",
+        "    # Robust SLIC (works with new and old scikit-image)\n",
+        "    def seg_fn(x):\n",
+        "        x = np.asarray(x)\n",
+        "        if x.ndim == 2:\n",
+        "            x = np.repeat(x[..., None], 3, axis=-1)\n",
+        "        x = x.astype(\"float32\")\n",
+        "        if x.max() > 1.5:\n",
+        "            x = x / 255.0\n",
+        "        try:\n",
+        "            return slic(x, n_segments=50, compactness=10, start_label=0, channel_axis=-1)\n",
+        "        except TypeError:\n",
+        "            # older scikit-image versions\n",
+        "            return slic(x, n_segments=50, compactness=10, start_label=0)\n",
+        "\n",
+        "    exp = explainer.explain_instance(\n",
+        "        image=img2d,                   # 2D grayscale is fine\n",
+        "        classifier_fn=predict_fn,\n",
+        "        labels=[0, 1],\n",
+        "        num_samples=NUM_SAMPLES,\n",
+        "        segmentation_fn=seg_fn\n",
+        "    )\n",
+        "\n",
+        "    # Model prediction for title\n",
+        "    rgb = np.repeat(img2d[..., None], 3, axis=-1)\n",
+        "    probs = predict_fn(rgb[None, ...])[0]\n",
+        "    pred = int(np.argmax(probs))\n",
+        "    p_smile = float(probs[1])\n",
+        "\n",
+        "    # Visualize explanation for the TRUE label\n",
+        "    true_label = int(y_test[idx])\n",
+        "    temp, mask = exp.get_image_and_mask(\n",
+        "        label=true_label,\n",
+        "        positive_only=False,\n",
+        "        hide_rest=False,\n",
+        "        num_features=NUM_FEATURES,\n",
+        "        min_weight=0.0,\n",
+        "    )\n",
+        "\n",
+        "    plt.figure(figsize=(4,4))\n",
+        "    plt.imshow(mark_boundaries(temp, mask), cmap=\"gray\")\n",
+        "    title = f\"idx {idx} | true: {'smile' if true_label==1 else 'not_smile'} | pred: {'smile' if pred==1 else 'not_smile'} ({p_smile:.2f})\"\n",
+        "    plt.title(f\"LIME — {title}\")\n",
+        "    plt.axis(\"off\")\n",
+        "    plt.savefig(out_path, dpi=180, bbox_inches=\"tight\")\n",
+        "    plt.close()\n",
+        "\n",
+        "# Run\n",
+        "for i, idx in enumerate(picked, start=1):\n",
+        "    out_file = os.path.join(FIG_DIR, f\"exp_sample{i}.png\")\n",
+        "    explain_and_save(idx, out_file)\n",
+        "    print(f\"Saved: {out_file}\")\n"
+      ],
+      "metadata": {
+        "id": "MIvw9_cBVbZ5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from matplotlib.image import imread\n",
+        "import os, glob\n",
+        "import numpy as np\n",
+        "\n",
+        "FIG_DIR = \"figures\"\n",
+        "\n",
+        "# Collect all generated explanation PNGs\n",
+        "files = sorted(glob.glob(os.path.join(FIG_DIR, \"exp_sample*.png\")))\n",
+        "\n",
+        "# Map each file back to its index (idx was included in the plot title, but filenames are sequential)\n",
+        "# We'll rely on the order from `picked` if you kept that variable\n",
+        "# If not, you can just separate manually later\n",
+        "print(f\"Found {len(files)} files\")\n",
+        "\n",
+        "def make_grid(image_paths, out_path, title, cols=4):\n",
+        "    rows = int(np.ceil(len(image_paths) / cols))\n",
+        "    plt.figure(figsize=(cols*3, rows*3))\n",
+        "    for i, f in enumerate(image_paths, 1):\n",
+        "        img = imread(f)\n",
+        "        plt.subplot(rows, cols, i)\n",
+        "        plt.imshow(img)\n",
+        "        plt.axis(\"off\")\n",
+        "        plt.title(os.path.basename(f), fontsize=8)\n",
+        "    plt.suptitle(title, fontsize=14)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(out_path, dpi=200, bbox_inches=\"tight\")\n",
+        "    plt.close()\n",
+        "    print(f\"Saved grid: {out_path}\")\n",
+        "\n",
+        "# Separate by class using y_test and picked\n",
+        "smile_files = []\n",
+        "not_smile_files = []\n",
+        "\n",
+        "for i, idx in enumerate(picked, start=1):\n",
+        "    f = os.path.join(FIG_DIR, f\"exp_sample{i}.png\")\n",
+        "    if not os.path.exists(f):\n",
+        "        continue\n",
+        "    if y_test[idx] == 1:\n",
+        "        smile_files.append(f)\n",
+        "    else:\n",
+        "        not_smile_files.append(f)\n",
+        "\n",
+        "# Generate grids\n",
+        "make_grid(smile_files, os.path.join(FIG_DIR, \"exp_grid_smile.png\"), \"LIME Explanations — Smile\")\n",
+        "make_grid(not_smile_files, os.path.join(FIG_DIR, \"exp_grid_not_smile.png\"), \"LIME Explanations — Not Smile\")\n"
+      ],
+      "metadata": {
+        "id": "WYWJsOXeXAMi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Get model predictions on the full test set\n",
+        "flat_X = X_test.reshape(len(X_test), -1) if X_test.ndim > 2 else X_test\n",
+        "probs = model.predict(flat_X, verbose=0).reshape(-1)\n",
+        "preds = (probs >= 0.5).astype(int)\n",
+        "\n",
+        "# Identify correct and incorrect indices\n",
+        "correct_idx = np.where(preds == y_test)[0]\n",
+        "incorrect_idx = np.where(preds != y_test)[0]\n",
+        "\n",
+        "print(f\"Correct predictions: {len(correct_idx)}\")\n",
+        "print(f\"Incorrect predictions: {len(incorrect_idx)}\")\n",
+        "\n",
+        "# Example: pick a few incorrect cases for inspection\n",
+        "sample_errors = incorrect_idx[:5]\n",
+        "\n",
+        "print(\"Sample misclassified indices:\", sample_errors)\n"
+      ],
+      "metadata": {
+        "id": "1S-C15ADXQqi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for j, idx in enumerate(sample_errors, start=1):\n",
+        "    out_path = os.path.join(FIG_DIR, f\"exp_error{j}.png\")\n",
+        "    explain_and_save(idx, out_path)\n",
+        "    print(f\"Saved error explanation: {out_path}\")\n"
+      ],
+      "metadata": {
+        "id": "7pTmAdSRXvEB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
