--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -28,6 +28,53 @@
     {
       "cell_type": "code",
       "source": [
+        "%%bash\n",
+        "cd /content/lime-smile-classifier\n",
+        "\n",
+        "# sobrescreve .gitignore com regras mínimas\n",
+        "cat > .gitignore <<'EOF'\n",
+        "# Python / OS junk\n",
+        "__pycache__/\n",
+        "*.pyc\n",
+        "*.pyo\n",
+        "*.pyd\n",
+        ".DS_Store\n",
+        ".ipynb_checkpoints/\n",
+        "*.swp\n",
+        "Thumbs.db\n",
+        "EOF\n",
+        "\n",
+        "git add .gitignore\n",
+        "git commit -m \"chore: clean .gitignore (allow data/)\" || true\n"
+      ],
+      "metadata": {
+        "id": "TA23FaTSqRcp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "cd /content/lime-smile-classifier\n",
+        "\n",
+        "# adiciona tudo (agora não está mais ignorado)\n",
+        "git add -A\n",
+        "git status\n",
+        "\n",
+        "git commit -m \"feat(data): add raw and processed datasets\" || echo \"No changes to commit\"\n",
+        "git push\n"
+      ],
+      "metadata": {
+        "id": "MS6_hsH8qWio"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# === Synthetic \"smiley vs not_smile\" dataset (clean mouth logic) ===\n",
         "# Creates data/raw/{smile,not_smile}/*.png and data/raw/labels.csv\n",
         "\n",
