--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -28,53 +28,6 @@
     {
       "cell_type": "code",
       "source": [
-        "%%bash\n",
-        "cd /content/lime-smile-classifier\n",
-        "\n",
-        "# sobrescreve .gitignore com regras mínimas\n",
-        "cat > .gitignore <<'EOF'\n",
-        "# Python / OS junk\n",
-        "__pycache__/\n",
-        "*.pyc\n",
-        "*.pyo\n",
-        "*.pyd\n",
-        ".DS_Store\n",
-        ".ipynb_checkpoints/\n",
-        "*.swp\n",
-        "Thumbs.db\n",
-        "EOF\n",
-        "\n",
-        "git add .gitignore\n",
-        "git commit -m \"chore: clean .gitignore (allow data/)\" || true\n"
-      ],
-      "metadata": {
-        "id": "TA23FaTSqRcp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%bash\n",
-        "cd /content/lime-smile-classifier\n",
-        "\n",
-        "# adiciona tudo (agora não está mais ignorado)\n",
-        "git add -A\n",
-        "git status\n",
-        "\n",
-        "git commit -m \"feat(data): add raw and processed datasets\" || echo \"No changes to commit\"\n",
-        "git push\n"
-      ],
-      "metadata": {
-        "id": "MS6_hsH8qWio"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# === Synthetic \"smiley vs not_smile\" dataset (clean mouth logic) ===\n",
         "# Creates data/raw/{smile,not_smile}/*.png and data/raw/labels.csv\n",
         "\n",
@@ -348,23 +301,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# quick checks\n",
-        "Xt = np.load(PROC_DIR / \"X_train.npy\")\n",
-        "yt = np.load(PROC_DIR / \"y_train.npy\")\n",
-        "\n",
-        "print(\"Shapes -> X_train:\", Xt.shape, \"| y_train:\", yt.shape)\n",
-        "print(\"Means/std (first 5 cols):\", Xt[:, :5].mean(axis=0), Xt[:, :5].std(axis=0))\n",
-        "print(\"Train balance:\", (yt==1).sum(), \"(smile) |\", (yt==0).sum(), \"(not_smile)\")\n"
-      ],
-      "metadata": {
-        "id": "R8A6uAFJVTSo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# --- Tiny MLP for smile vs not_smile (Keras/TF) ---\n",
         "\n",
         "import os, json, random, numpy as np\n",
@@ -452,6 +388,15 @@
         "\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
         "\n",
+        "# --- Save classification report to .txt ---\n",
+        "RESULTS_DIR = Path(\"results\")\n",
+        "RESULTS_DIR.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "acc = (y_pred == y_test).mean()\n",
+        "with open(RESULTS_DIR / \"classification_report.txt\", \"w\") as f:\n",
+        "    f.write(f\"Test accuracy: {acc:.3f}\\n\\n\")\n",
+        "    f.write(classification_report(y_test, y_pred, target_names=[\"not_smile\",\"smile\"]))\n",
+        "\n",
         "# Plot: training curves\n",
         "plt.figure(figsize=(6,4))\n",
         "plt.plot(history.history[\"accuracy\"], label=\"train acc\")\n",
@@ -486,157 +431,7 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "PNwaj41gY4Yq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.save(\"models/mlp_smile_classifier.keras\")\n"
-      ],
-      "metadata": {
-        "id": "aDPmWozzcgAI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "os.makedirs(\"models\", exist_ok=True)\n",
-        "os.makedirs(\"results\", exist_ok=True)\n",
-        "\n",
-        "# salvar modelo e histórico\n",
-        "model.save(\"models/mlp_smile_classifier.keras\")\n",
-        "np.save(\"results/history.npy\", history.history)\n"
-      ],
-      "metadata": {
-        "id": "J4pEMH7idFG3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# --- 1) Compute metrics ---\n",
-        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np, os\n",
-        "\n",
-        "# predictions\n",
-        "proba = model.predict(X_test, verbose=0).ravel()\n",
-        "y_pred = (proba >= 0.5).astype(int)\n",
-        "\n",
-        "acc = accuracy_score(y_test, y_pred)\n",
-        "print(f\"Test accuracy: {acc:.3f}\")\n",
-        "\n",
-        "report = classification_report(y_test, y_pred, target_names=[\"not_smile\",\"smile\"])\n",
-        "print(report)\n",
-        "\n",
-        "# save report to file\n",
-        "os.makedirs(\"results\", exist_ok=True)\n",
-        "with open(\"results/classification_report.txt\", \"w\") as f:\n",
-        "    f.write(f\"Test accuracy: {acc:.3f}\\n\\n\")\n",
-        "    f.write(report)\n",
-        "\n",
-        "# --- 2) Confusion matrix ---\n",
-        "FIG_DIR = \"figures\"\n",
-        "os.makedirs(FIG_DIR, exist_ok=True)\n",
-        "\n",
-        "cm = confusion_matrix(y_test, y_pred)\n",
-        "fig, ax = plt.subplots(figsize=(5,5))\n",
-        "im = ax.imshow(cm, cmap=\"Blues\")\n",
-        "ax.figure.colorbar(im, ax=ax, fraction=0.046, pad=0.04)\n",
-        "ax.set_xticks([0,1]); ax.set_yticks([0,1])\n",
-        "ax.set_xticklabels([\"not_smile\",\"smile\"]); ax.set_yticklabels([\"not_smile\",\"smile\"])\n",
-        "ax.set_xlabel(\"Predicted\"); ax.set_ylabel(\"True\")\n",
-        "for i in range(2):\n",
-        "    for j in range(2):\n",
-        "        ax.text(j, i, cm[i, j], ha=\"center\", va=\"center\", fontsize=12)\n",
-        "ax.set_title(\"Confusion Matrix\")\n",
-        "plt.tight_layout()\n",
-        "plt.savefig(f\"{FIG_DIR}/confusion_matrix.png\", dpi=160, bbox_inches=\"tight\")\n",
-        "plt.show()\n",
-        "\n",
-        "# --- 3) Accuracy per epoch (if history exists) ---\n",
-        "if os.path.exists(\"results/history.npy\"):\n",
-        "    hist = np.load(\"results/history.npy\", allow_pickle=True).item()\n",
-        "    train_acc = hist.get(\"accuracy\", [])\n",
-        "    val_acc   = hist.get(\"val_accuracy\", [])\n",
-        "\n",
-        "    plt.figure(figsize=(6,4))\n",
-        "    if train_acc: plt.plot(train_acc, label=\"train acc\")\n",
-        "    if val_acc:   plt.plot(val_acc,   label=\"val acc\")\n",
-        "    plt.xlabel(\"Epoch\"); plt.ylabel(\"Accuracy\"); plt.title(\"MLP accuracy\")\n",
-        "    plt.legend()\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig(f\"{FIG_DIR}/accuracy.png\", dpi=160, bbox_inches=\"tight\")\n",
-        "    plt.show()\n"
-      ],
-      "metadata": {
-        "id": "WLOSFX9x78vo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Minimal evaluation saver: writes files without displaying plots\n",
-        "import os, numpy as np, matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-        "\n",
-        "os.makedirs(\"results\", exist_ok=True)\n",
-        "os.makedirs(\"figures\", exist_ok=True)\n",
-        "\n",
-        "# 1) Metrics → results/classification_report.txt\n",
-        "proba  = model.predict(X_test, verbose=0).ravel()\n",
-        "y_pred = (proba >= 0.5).astype(int)\n",
-        "acc    = accuracy_score(y_test, y_pred)\n",
-        "report = classification_report(y_test, y_pred, target_names=[\"not_smile\",\"smile\"])\n",
-        "\n",
-        "with open(\"results/classification_report.txt\", \"w\") as f:\n",
-        "    f.write(f\"Test accuracy: {acc:.3f}\\n\\n\")\n",
-        "    f.write(report)\n",
-        "\n",
-        "# 2) Confusion matrix → figures/confusion_matrix.png\n",
-        "cm = confusion_matrix(y_test, y_pred)\n",
-        "fig, ax = plt.subplots(figsize=(5,5))\n",
-        "im = ax.imshow(cm, cmap=\"Blues\")\n",
-        "ax.figure.colorbar(im, ax=ax, fraction=0.046, pad=0.04)\n",
-        "ax.set_xticks([0,1]); ax.set_yticks([0,1])\n",
-        "ax.set_xticklabels([\"not_smile\",\"smile\"]); ax.set_yticklabels([\"not_smile\",\"smile\"])\n",
-        "ax.set_xlabel(\"Predicted\"); ax.set_ylabel(\"True\")\n",
-        "for i in range(2):\n",
-        "    for j in range(2):\n",
-        "        ax.text(j, i, cm[i, j], ha=\"center\", va=\"center\", fontsize=12)\n",
-        "ax.set_title(\"Confusion Matrix\")\n",
-        "plt.tight_layout()\n",
-        "plt.savefig(\"figures/confusion_matrix.png\", dpi=160, bbox_inches=\"tight\")\n",
-        "plt.close(fig)\n",
-        "\n",
-        "# 3) Accuracy per epoch (if history exists) → figures/accuracy.png\n",
-        "if os.path.exists(\"results/history.npy\"):\n",
-        "    hist = np.load(\"results/history.npy\", allow_pickle=True).item()\n",
-        "    train_acc = hist.get(\"accuracy\", [])\n",
-        "    val_acc   = hist.get(\"val_accuracy\", [])\n",
-        "\n",
-        "    fig2, ax2 = plt.subplots(figsize=(6,4))\n",
-        "    if train_acc: ax2.plot(train_acc, label=\"train acc\")\n",
-        "    if val_acc:   ax2.plot(val_acc,   label=\"val acc\")\n",
-        "    ax2.set_xlabel(\"Epoch\"); ax2.set_ylabel(\"Accuracy\"); ax2.set_title(\"MLP accuracy\")\n",
-        "    ax2.legend()\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig(\"figures/accuracy.png\", dpi=160, bbox_inches=\"tight\")\n",
-        "    plt.close(fig2)\n"
-      ],
-      "metadata": {
-        "id": "0aa0feI-_dm_"
+        "id": "QQOvFcoDqud2"
       },
       "execution_count": null,
       "outputs": []
@@ -727,6 +522,17 @@
       ],
       "metadata": {
         "id": "Ae-NUUgvC4XU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dar sequencia na limpeza a partir daqui"
+      ],
+      "metadata": {
+        "id": "dfUnqJsNsCCz"
       },
       "execution_count": null,
       "outputs": []
