--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -529,46 +529,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#dar sequencia na limpeza a partir daqui"
-      ],
-      "metadata": {
-        "id": "dfUnqJsNsCCz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import numpy as np\n",
-        "import json\n",
-        "\n",
-        "# Make sure the folders exist\n",
-        "os.makedirs(\"models\", exist_ok=True)\n",
-        "os.makedirs(\"results\", exist_ok=True)\n",
-        "\n",
-        "# --- Save model ---\n",
-        "model.save(\"models/mlp_smile_final.keras\")\n",
-        "\n",
-        "# --- Save training history (as .npy) ---\n",
-        "np.save(\"results/history.npy\", history.history)\n",
-        "\n",
-        "# --- Save training history (as .json) ---\n",
-        "with open(\"results/mlp_history.json\", \"w\") as f:\n",
-        "    json.dump(history.history, f)\n"
-      ],
-      "metadata": {
-        "id": "p6y4RNMdNiDA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Batch LIME Explanations (save as exp_sample#.png)\n",
-        "\n",
         "!pip -q install lime\n",
         "from lime import lime_image\n",
         "from skimage.segmentation import slic, mark_boundaries\n",
@@ -583,9 +543,9 @@
         "FIG_DIR      = \"figures\"\n",
         "os.makedirs(FIG_DIR, exist_ok=True)\n",
         "\n",
-        "N_TOTAL      = 10        # total explanations to generate\n",
-        "NUM_SAMPLES  = 800       # higher = more stable, but slower\n",
-        "NUM_FEATURES = 6         # number of superpixels highlighted\n",
+        "N_TOTAL      = 10       # total explanations to generate\n",
+        "NUM_SAMPLES  = 800      # higher = more stable, but slower\n",
+        "NUM_FEATURES = 6        # number of superpixels highlighted\n",
         "RANDOM_STATE = 42\n",
         "\n",
         "# --- load model and data ---\n",
@@ -607,12 +567,12 @@
         "# Predictor for LIME\n",
         "def predict_fn(images):\n",
         "    arr = np.array(images)\n",
-        "    if arr.ndim == 3:                 # single image\n",
+        "    if arr.ndim == 3:  # single image\n",
         "        arr = arr[None, ...]\n",
         "    arr = arr.astype(\"float32\")\n",
         "    if arr.max() > 1.5:\n",
         "        arr = arr / 255.0\n",
-        "    if arr.shape[-1] == 3:            # RGB -> grayscale\n",
+        "    if arr.shape[-1] == 3:  # RGB -> grayscale\n",
         "        arr = arr.mean(axis=-1)\n",
         "    flat = arr.reshape(len(arr), -1)\n",
         "    p_smile = model.predict(flat, verbose=0).reshape(-1, 1)  # sigmoid\n",
@@ -624,7 +584,7 @@
         "def explain_and_save(idx, out_path):\n",
         "    img2d = to_2d(X_test[idx])\n",
         "\n",
-        "    # Robust SLIC (works with new and old scikit-image)\n",
+        "    # Robust SLIC (new/old scikit-image)\n",
         "    def seg_fn(x):\n",
         "        x = np.asarray(x)\n",
         "        if x.ndim == 2:\n",
@@ -635,11 +595,10 @@
         "        try:\n",
         "            return slic(x, n_segments=50, compactness=10, start_label=0, channel_axis=-1)\n",
         "        except TypeError:\n",
-        "            # older scikit-image versions\n",
         "            return slic(x, n_segments=50, compactness=10, start_label=0)\n",
         "\n",
         "    exp = explainer.explain_instance(\n",
-        "        image=img2d,                   # 2D grayscale is fine\n",
+        "        image=img2d,                  # 2D grayscale\n",
         "        classifier_fn=predict_fn,\n",
         "        labels=[0, 1],\n",
         "        num_samples=NUM_SAMPLES,\n",
@@ -664,7 +623,8 @@
         "\n",
         "    plt.figure(figsize=(4,4))\n",
         "    plt.imshow(mark_boundaries(temp, mask), cmap=\"gray\")\n",
-        "    title = f\"idx {idx} | true: {'smile' if true_label==1 else 'not_smile'} | pred: {'smile' if pred==1 else 'not_smile'} ({p_smile:.2f})\"\n",
+        "    # >>> correção aqui: f-string sem quebra/aspas faltando <<<\n",
+        "    title = f\"idx {idx} | true: {'smile' if true_label==1 else 'not_smile'} | pred: {'smile' if pred==1 else 'not_smile'} | p(smile)={p_smile:.3f}\"\n",
         "    plt.title(f\"LIME — {title}\")\n",
         "    plt.axis(\"off\")\n",
         "    plt.savefig(out_path, dpi=180, bbox_inches=\"tight\")\n",
@@ -677,7 +637,7 @@
         "    print(f\"Saved: {out_file}\")\n"
       ],
       "metadata": {
-        "id": "MIvw9_cBVbZ5"
+        "id": "TiViVkv8H8FU"
       },
       "execution_count": null,
       "outputs": []
@@ -694,10 +654,6 @@
         "\n",
         "# Collect all generated explanation PNGs\n",
         "files = sorted(glob.glob(os.path.join(FIG_DIR, \"exp_sample*.png\")))\n",
-        "\n",
-        "# Map each file back to its index (idx was included in the plot title, but filenames are sequential)\n",
-        "# We'll rely on the order from `picked` if you kept that variable\n",
-        "# If not, you can just separate manually later\n",
         "print(f\"Found {len(files)} files\")\n",
         "\n",
         "def make_grid(image_paths, out_path, title, cols=4):\n",
@@ -733,7 +689,7 @@
         "make_grid(not_smile_files, os.path.join(FIG_DIR, \"exp_grid_not_smile.png\"), \"LIME Explanations — Not Smile\")\n"
       ],
       "metadata": {
-        "id": "WYWJsOXeXAMi"
+        "id": "1EQaDWDOI71C"
       },
       "execution_count": null,
       "outputs": []
@@ -776,108 +732,6 @@
       ],
       "metadata": {
         "id": "7pTmAdSRXvEB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Remove folder sample_data created by Colab\n",
-        "import shutil\n",
-        "import os\n",
-        "\n",
-        "if os.path.exists(\"sample_data\"):\n",
-        "    shutil.rmtree(\"sample_data\")\n",
-        "    print(\"sample_data folder removed successfully.\")\n",
-        "else:\n",
-        "    print(\"No sample_data folder found.\")\n"
-      ],
-      "metadata": {
-        "id": "gJj5P5_5Pl5k"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# === Minimal repo materializer (lime-smile-classifier) ===\n",
-        "import os, glob, shutil, numpy as np\n",
-        "\n",
-        "BASE = \".\"\n",
-        "DIRS = {\n",
-        "    \"raw\":        \"data/raw\",\n",
-        "    \"proc\":       \"data/processed\",\n",
-        "    \"fig\":        \"figures\",\n",
-        "    \"res\":        \"results\",\n",
-        "    \"models\":     \"models\",\n",
-        "    \"nb\":         \"notebooks\",\n",
-        "}\n",
-        "for d in DIRS.values(): os.makedirs(d, exist_ok=True)\n",
-        "open(os.path.join(DIRS[\"raw\"], \".gitkeep\"), \"a\").close()  # keep raw/ in Git\n",
-        "\n",
-        "# 1) Save arrays if present\n",
-        "def save_npy(name, arr):\n",
-        "    dst = os.path.join(DIRS[\"proc\"], name); np.save(dst, arr); print(\"Saved:\", dst)\n",
-        "\n",
-        "for var, fname in [(\"X_train\",\"X_train.npy\"),(\"y_train\",\"y_train.npy\"),\n",
-        "                   (\"X_test\",\"X_test.npy\"),(\"y_test\",\"y_test.npy\")]:\n",
-        "    if var in globals(): save_npy(fname, globals()[var])\n",
-        "\n",
-        "# 2) Move & normalize figures\n",
-        "RENAME = {\n",
-        "    \"mlp_accuracy.png\":         \"training_accuracy.png\",\n",
-        "    \"accuracy.png\":             \"training_accuracy.png\",\n",
-        "    \"mlp_loss.png\":             \"training_loss.png\",\n",
-        "    \"mlp_confusion_matrix.png\": \"confusion_matrix.png\",\n",
-        "}\n",
-        "def move_figure(path):\n",
-        "    name = os.path.basename(path)\n",
-        "    name = RENAME.get(name, name)  # normalize common variants\n",
-        "    dst  = os.path.join(DIRS[\"fig\"], name)\n",
-        "    if os.path.abspath(path) != os.path.abspath(dst):\n",
-        "        os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
-        "        shutil.move(path, dst); print(\"Moved →\", dst)\n",
-        "\n",
-        "for pat in (\"*.png\", \"notebooks/*.png\"):\n",
-        "    for p in glob.glob(pat):\n",
-        "        if os.path.commonpath([os.path.abspath(p), os.path.abspath(DIRS[\"fig\"])]) == os.path.abspath(DIRS[\"fig\"]):\n",
-        "            continue\n",
-        "        move_figure(p)\n",
-        "\n",
-        "# 3) Move models\n",
-        "for p in glob.glob(\"*.keras\")+glob.glob(\"*.h5\"):\n",
-        "    dst = os.path.join(DIRS[\"models\"], os.path.basename(p))\n",
-        "    if os.path.abspath(p)!=os.path.abspath(dst): shutil.move(p,dst); print(\"Moved →\", dst)\n",
-        "\n",
-        "# 4) Move results (keep README/requirements at root)\n",
-        "SKIP = {\"readme.md\",\"requirements.txt\"}\n",
-        "for pat in (\"*.txt\",\"*.npy\",\"*.json\"):\n",
-        "    for p in glob.glob(pat):\n",
-        "        if os.path.basename(p).lower() in SKIP: continue\n",
-        "        dst = os.path.join(DIRS[\"res\"], os.path.basename(p))\n",
-        "        if os.path.abspath(p)!=os.path.abspath(dst): shutil.move(p,dst); print(\"Moved →\", dst)\n",
-        "\n",
-        "# 5) Move notebooks from root\n",
-        "for nb in glob.glob(\"*.ipynb\"):\n",
-        "    dst = os.path.join(DIRS[\"nb\"], os.path.basename(nb))\n",
-        "    if os.path.abspath(nb)!=os.path.abspath(dst): shutil.move(nb,dst); print(\"Moved →\", dst)\n",
-        "\n",
-        "# 6) Print tree\n",
-        "def tree(root=\".\"):\n",
-        "    for dp, dn, fn in os.walk(root):\n",
-        "        dn[:]  = [d for d in dn if not d.startswith(\".\")]\n",
-        "        fn[:]  = [f for f in fn if not f.startswith(\".\")]\n",
-        "        ind = \"    \" * (dp.replace(root, \"\").count(os.sep))\n",
-        "        print(f\"{ind}{os.path.basename(dp)}/\")\n",
-        "        for f in sorted(fn): print(f\"{ind}    {f}\")\n",
-        "\n",
-        "print(\"\\n=== Repository tree ===\")\n",
-        "tree(BASE)\n"
-      ],
-      "metadata": {
-        "id": "O7pLNBMITJXC"
       },
       "execution_count": null,
       "outputs": []
