--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -26,6 +26,75 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Interpreting Toy Neural Networks with LIME\n",
+        "**Mini‑project** · Portfolio-ready version\n",
+        "\n",
+        "This notebook demonstrates a compact, reproducible pipeline for training a small Multi-Layer Perceptron (MLP) to classify smiles vs. not smile from grayscale face images. Beyond accuracy, it integrates interpretability via LIME (Local Interpretable Model-Agnostic Explanations), highlighting regions of the face that drive the model’s predictions. It is intentionally compact and reproducible for reviewers."
+      ],
+      "metadata": {
+        "id": "9kv5YW1MK-ow"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## How to run\n",
+        "\n",
+        "\n",
+        "1. Open in Google Colab or a local Jupyter environment.\n",
+        "\n",
+        "2. Run the Setup cell to install dependencies.\n",
+        "\n",
+        "3. Execute cells in order: Data loading → Preprocessing → Model → Training → Metrics → Interpretability (LIME).\n",
+        "\n",
+        "4. Outputs (models, reports, figures) are saved into structured folders.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TaKNWlzQL8vo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Folder structure**\n",
+        "\n",
+        "- `data/processed/` – preprocessed train/test arrays (X_train.npy, y_train.npy, …)\n",
+        "\n",
+        "- `models/` – saved Keras models (mlp_smile_best.keras, mlp_smile_final.keras)\n",
+        "\n",
+        "- `results/` – evaluation reports (classification_report.txt, JSON history)\n",
+        "\n",
+        "- `figures/` – accuracy/loss curves, confusion matrix, and LIME explanations"
+      ],
+      "metadata": {
+        "id": "uPuBAZ4FMXfy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Smile Classification — Minimal, Reproducible Pipeline**\n",
+        "\n",
+        "1. This notebook:\n",
+        "\n",
+        "2. Loads preprocessed data.\n",
+        "\n",
+        "3. Builds and trains a compact MLP with dropout regularization.\n",
+        "\n",
+        "4. Evaluates performance (accuracy, loss, confusion matrix, classification report).\n",
+        "\n",
+        "5. Saves trained models and metrics for reproducibility.\n",
+        "\n",
+        "6. Produces LIME explanations to visualize which facial regions drive predictions."
+      ],
+      "metadata": {
+        "id": "ky93ABZUNvUa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# === Synthetic \"smiley vs not_smile\" dataset (clean mouth logic) ===\n",
@@ -735,6 +804,37 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Finished\n",
+        "\n",
+        "**Artifacts:**\n",
+        "\n",
+        "Final model: `models/mlp_smile_final.keras`\n",
+        "\n",
+        "Best checkpoint: `models/mlp_smile_best.keras`\n",
+        "\n",
+        "Training history: `models/mlp_smile_history.json`\n",
+        "\n",
+        "Evaluation report: results/classification_report.txt\n",
+        "\n",
+        "**Figures:**\n",
+        "\n",
+        "`figures/mlp_accuracy.png`\n",
+        "\n",
+        "`figures/mlp_loss.png`\n",
+        "\n",
+        "`figures/mlp_confusion_matrix.png`\n",
+        "\n",
+        "`figures/lime_*.png (individual explanations)`\n",
+        "\n",
+        "`figures/exp_grid_*.png (grids by class)`"
+      ],
+      "metadata": {
+        "id": "BGe8sYfgONE_"
+      }
     }
   ]
 }
