--- a/neural_network_with_LIME.ipynb
+++ b/neural_network_with_LIME.ipynb
@@ -97,8 +97,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# === Synthetic \"smiley vs not_smile\" dataset (clean mouth logic) ===\n",
-        "# Creates data/raw/{smile,not_smile}/*.png and data/raw/labels.csv\n",
+        "# === Synthetic \"smile vs not_smile\" dataset generator ===\n",
+        "# Outputs:\n",
+        "#   - PNG icons for each class in: data/raw/{smile,not_smile}/*.png\n",
+        "#   - A label index file: data/raw/labels.csv\n",
         "\n",
         "import os, csv, random, math\n",
         "from pathlib import Path\n",
